# trend-trading

./: .gitignore  LICENSE  README.en.md  README.md  pyproject.toml
tests/: __init__.py  test_clenow.py  test_indicators.py
trend_trading/: __init__.py  __main__.py  cli.py
trend_trading/analysis/: __init__.py  stage.py
trend_trading/data/: __init__.py  cache.py  fetcher.py
trend_trading/indicators/: __init__.py  atr.py  donchian.py  ma.py  slope.py
trend_trading/systems/: __init__.py  base.py  clenow.py
